5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1602_2895.log
== TEST (2019-03-20 17:51:29) 
-- CODE:
quantidade=input(" quantidade ")

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:00:19) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
valor = float(input("valor uni. "))
frete=					 

-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:00:53) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
valor = float(input("valor uni. "))
frete = float(input("frete :")
				  

-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:01:16) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
valor = float(input("valor uni. "))
frete = float(input("frete :")
				  
				  

-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:01:42) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
valor = float(input("valor unitario. :"))
frete = float(input("frete :")
				  
				  

-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:02:10) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
valor = float(input("valor unitario. "))
frete = float(input("frete :")
				  
				  

-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:02:32) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var = float(input("valor unitario. "))
frete = float(input("frete :")
				  
				  

-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:03:12) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var = float(input("valor unitario. "))
frete = float(input("frete :")
				  
				  

-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:03:26) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var = float(input("valor unitario. :"))
frete = float(input("frete :")
				  
				  

-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:03:50) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var = float(input("valor unitario. :"))
frete = float(input("frete :"))
				  
				  

-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:04:09) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var = float(input("valor unitario. :"))
frete = float(input("frete. :"))
				  
				  

-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:04:38) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var=float(input("valor unitario. :"))
frete=float(input("frete. :"))
				  
				  

-- ERROR:
File "XXXX", line 2
    var=float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:04:54) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var=float(input("valor un. :"))
frete=float(input("frete :"))
				  
				  

-- ERROR:
File "XXXX", line 2
    var=float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:08:47) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var = float(input("valor un. :"))
frete = float(input("frete :"))
					 				  		
-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:15:18) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var = float(input("valor un. :"))
frete = float(input("frete :"))
					 
print("total")
					 
-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:20:16) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var = float(input("valor un. :"))
frete = float(input("frete :"))					 
print("total")
					 
-- EXECUTION TIME:
0.140848
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:20:28) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var = float(input("valor un. :"))
frete = float(input("frete :"))					 
print(total)
					 
-- EXECUTION TIME:
0.185799
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:22:40) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var = float(input("valor un. :"))
frete = float(input("frete :"))					 
print(total)
					 
-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:23:35) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var = float(input("valor un. :")
frete = float(input("frete :")				 
print(total)
					 
-- ERROR:
File "XXXX", line 2
    var = float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:24:35) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var = float(input("valor un. :")
frete = float(input("frete :")
total= quantidade+valor+frete)				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    var = float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:25:18) 
-- CODE:
quantidade= int(input(" quantidade de jogos? ")
var = float(input("valor un. :"))
frete = float(input("frete :"))
total= quantidade + valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:25:46) 
-- CODE:
quantidade = int(input(" quantidade de jogos? ")
var = float(input("valor un. :"))
frete = float(input("frete :"))
total= quantidade + valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:26:31) 
-- CODE:
quantidade = int(input(" quantidade de jogos? ")
var = float(input("valor un. :"))
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:26:34) 
-- CODE:
quantidade = int(input(" quantidade de jogos? ")
var = float(input("valor un. :"))
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- EXECUTION TIME:
0.118911
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:27:46) 
-- CODE:
quantidade = int(input(" quantidade de jogos? ")
var = float(input("valor do jogo. :"))
frete = float(input("frete :"))
total= quantidade * var + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:27:54) 
-- CODE:
quantidade = int(input(" quantidade de jogos? ")
var = float(input("valor do jogo. "))
frete = float(input("frete :"))
total= quantidade * var + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    var = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:28:20) 
-- CODE:
quantidade = int(input(" quantidade de jogos? ")
valor = float(input("valor do jogo. "))
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:28:54) 
-- CODE:
quantidade = int(input(" quantidade de jogos? ")
valor = float(input("valor do jogo. "))
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:30:01) 
-- CODE:
quantidade = int(input(" quantidade de jogos: ")
valor = float(input("valor do jogo. "))
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:31:29) 
-- CODE:
quantidade = int(input(" quantidade de jogos: ")
valor = float(input("valor un. :")
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    valor = float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:33:53) 
-- CODE:
quantidade = int(input(" quantidade de jogos: ")
valor = float(input("valor un. :")
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    valor = float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:42:50) 
-- CODE:
quantidade = int(input(" quantidade de jogos: ")
valor = float(input("valor un. :")
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    valor = float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:42:58) 
-- CODE:
quantidade = int(input(" quantidade de jogos: ")
valor = float(input("valor un. :"))
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:54:39) 
-- CODE:
quantidade = int(input(" quantidade de jogos: ")
valor = float(input("valor un. :"))
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:54:44) 
-- CODE:
quantidade = int(input(" quantidade de jogos: ")
valor = float(input("valor un :"))
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:50:06) 
-- CODE:
quantidade = int(input(" quantidade de jogos: ")
valor = float(input("valor un. :"))
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:58:41) 
-- CODE:
quantidade = float(input(" quantidade de jogos: ")
valor = float(input("valor un. :"))
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:03:35) 
-- CODE:
quantidade = int(input(" quantidade de jogos: ")
valor = float(input("valor un. :"))
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:03:52) 
-- CODE:
quantidade = int(input(" quantidade de jogos: ")
valor = float(input("valor un :"))
frete = float(input("frete :"))
total= quantidade * valor + frete				  
print(total)
					 
-- ERROR:
File "XXXX", line 2
    valor = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:14:45) 
-- CODE:
quantidade = int(input(" quantidade de jogos: "))
valor = float(input("valor un :"))
frete = float(input("frete :"))
total= ((quantidade * valor)) + frete				  
print(total)
					 
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:15:23) 
-- CODE:
quantidade = int(input(" quantidade de jogos: "))
valor = float(input("valor un :"))
frete = float(input("frete :"))
total= ((quantidade * valor)) + frete				  
print(total)
					 
-- EXECUTION TIME:
0.212042
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:17:33) 
-- CODE:
quantidade = int(input(" quantidade de jogos: "))
valor = float(input("valor un :"))
frete = float(input("frete :"))
total= ((quantidade * valor)) + frete				  
print(total)
					 
-- EXECUTION TIME:
0.136389
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
